--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,15 +6,20 @@
 version: 2
 
 # Build documentation in the docs/ directory with Sphinx
+
 sphinx:
-   configuration: docs/conf.py
+
+  builder: html
+  configuration: conf.py
+  fail_on_warning: true
 
 # Optionally build your docs in additional formats such as PDF
 formats:
-   - pdf
+  - pdf
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
-   version: 3.7
-   install:
-   - requirements: docs/requirements.txt
+  version: 3.7
+  install:
+  - requirements: docs/requirements.txt
+    
