--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,7 +6,7 @@ version: 2
 sphinx:
   builder: html
   configuration: conf.py
-  fail_on_warning: true
+  fail_on_warning: docs/conf.py
 
 
 formats:
