--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,19 @@
 # Unittest
 coverage
 
-# Code analysis
-bandit
+
 #metrics.pylint
 flake8
 flake8-docstrings
 flake8-polyfill
 pylint
-radon
 
 # Documentation
 pdoc3
 sphinx
 sudo
 sphinx_rtd_theme
+conda
+mesa
+conda
+graphviz
