--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -7,5 +7,9 @@ build:
   nodes:
     analysis:
       tests:
-        override:
-          - py-scrutinizer-run
+       override:
+          - command: ./run-my-tests
+            coverage:
+              file: dice_game/.coverage.xml
+        #override:
+          #- py-scrutinizer-run
