--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -5,13 +5,8 @@ checks:
 
 build:
   nodes:
-    coverage:
+    analysis:
       tests:
-        #override:
-         # - command: './run-tests.sh'
-          #  coverage:
-           #   file: '.coverage'
-            #  config_file: '.coveragerc'
-             # format: 'py-cc'
         override:
+          - js-scrutinizer-run
           - py-scrutinizer-run
