modify Makefile, simplyfy switcher

--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,8 @@ sphinxcontrib-htmlhelp==1.0.3
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
+
+
+
+bandit==1.7.0
+radon==4.5.0
