--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,23 @@
 alabaster==0.7.12
 
 
-coverage==5.5
-decorator==4.4.2
-doc==0.1.0
+
+
+# Code unit-tests and linter
 
 flake8==3.8.4
 flake8-docstrings==1.5.0
 flake8-polyfill==1.0.2
 
-pdoc3==0.9.2
 pylint==2.7.2
+coverage==5.5
 
 
-snowballstemmer==2.1.0
+# Pydocs
+pdoc3==0.9.2
+decorator==4.4.2
+doc==0.1.0
+
 Sphinx==3.5.2
 -e git+https://github.com/alendit/sphinx-pyreverse.git@590ed51fc1edac9a98a91a2bf559a313bfd6b994#egg=sphinx_pyreverse
 sphinx-rtd-theme==0.5.1
@@ -25,6 +29,7 @@ sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
 
 
+# Complexity measurement
 
 bandit==1.7.0
 radon==4.5.0
