add make flake8 to scrutinizer confi

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -8,6 +8,7 @@ build:
     analysis:
       tests:
         override:
+          - command: make flake8
           - command: make coverage-xml
             coverage:
               file: ".coverage"
